--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "div/yii2-geoip",
+    "name": "pitonn/yii2-geoip",
     "description": "Yii2 расширение для определения города пользователя (используется сервис ipgeobase.ru)",
     "version": "1.0.0",
     "licence": "MIT",
@@ -11,9 +11,6 @@
     ],
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "require": {
-        "yiisoft/yii2": "*"
-    },
     "autoload": {
         "psr-4": {
             "div\\geoip\\": ""
